cleaned up dark mode some more a and fixed footer width issue

--- a/styles/map.css
+++ b/styles/map.css
@@ -1,3 +1,6 @@
+body{
+  margin: 0;
+}
 .leaflet-container {
     width: 100%;
     height: 50vh;
@@ -9,8 +12,16 @@
     filter: invert(0);
   }
 
-  .dark .top-header header{
-    filter: invert(0);
+  .dark .big-footer{
+    filter: invert(1);
+  }
+
+  .dark .footer-image{
+    filter: invert(1);
+  }
+
+  .dark .kpow-image{
+    filter: invert(1);
   }
 
   .dark img{
